--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <section id=navigation>
         <nav>
           <ul>
-            <li><a href="#1">Home</a></li>
-            <li><a href="#2">About</a></li>
-            <li><a href="#3">Contact</a></li>
-            <li><a href="3">Cupcakes</a></li>
-            <li><a href="5">Ocassion</a></li>
-            <li><a href="5">Delivery</a></li>
-            <li><a href="5">View Cart</a></li>
+            <a href="TC_homepage_Girik.html">Home</a>
+        <a href="About_Hamza.html">About</a>
+        <a href="Contact Us - WEB REDESIGN.html">Contact</a>
+        <a href="Occasion_Page.html">Cupcakes</a>
+        <a href="toronto_cupcake.html">Occasion</a>
+        <a href="index.html">Delivery</a>
+        <a href="Shopping cart.html">View Cart</a>
           </ul>
         </nav>
       </section>
