--- a/index.html
+++ b/index.html
@@ -1,156 +1,131 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toronto Cupcakes</title>
-    <link rel="stylesheet" href="TC_homepage_style.css">
-  </head>
-  
-  <body>
-    <header class="header">
-      <div class="header-content">
-        <h1>Toronto Cupcakes</h1>
-        <img src="Toronto_Cupcake_Logo.webp" class="logo"><br>
-      </div>
+    <title>Delivery Page</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-      <div class="banner-image">
-        <img src="Banner.jpg" alt="Toronto Cupcakes Banner">
-      </div>
+    <div class="logo-container">
+        <img src="logo.png" alt="Toronto Cupcakes" class="logo">
+    </div>
+
+    <div class="headings-container">
+        <div class="headings">
+            <span>Weddings</span>
+            <span>Birthdays</span>
+            <span>Themes</span>
+            <span>Anniversaries</span>
+            <span>Graduations</span>
+            <span>Holidays</span>
+            <span>Baby</span>
+            <span>Wrap</span>
+        </div>
+    </div>
+
+       <div class="sidebar" id="mySidebar">
+        <span class="close-btn" onclick="closeSidebar()">Close &times;</span>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Cupcakes</a>
+        <a href="#">Occasion</a>
+        <a href="#">Delivery</a>
+        <a href="#">View Cart</a>
+    </div>
+
+    <div class="content">
+        <button class="open-btn" onclick="toggleSidebar()">
+  <span class="icon-bar"></span>
+  <span class="icon-bar"></span>
+  <span class="icon-bar"></span>
+</button>
+
+        <h1 class="page-title">Delivery Page</h1>
+    </div>
+
+    <div class="form-section container">
+        <h2>Delivery Options</h2>
+        <form>
+            <label for="delivery-type">Choose Delivery Method:</label>
+            <select id="delivery-type" name="delivery-type" onchange="toggleAddressFields()">
+                <option value="pickup">Pickup</option>
+                <option value="delivery">Delivery</option>
+            </select>
+
+            <div id="delivery-inputs">
+                <label for="address">Address:</label>
+                <input type="text" id="address" name="address" placeholder="Enter your address">
+                <label for="city">City:</label>
+                <input type="text" id="city" name="city" placeholder="Enter your city">
+                <label for="zip">Zip Code:</label>
+                <input type="text" id="zip" name="zip" placeholder="Enter your zip code">
+            </div>
+
+            <h2>Payment Information</h2>
+            <label for="card-number">Card Number:</label>
+            <input type="text" id="card-number" name="card-number" placeholder="1234 5678 9012 3456">
+            <label for="expiry">Expiry Date:</label>
+            <input type="month" id="expiry" name="expiry">
+            <label for="cvv">CVV:</label>
+            <input type="text" id="cvv" name="cvv" placeholder="123">
+
+            <button type="submit" class="submit-btn">Submit</button>
+        </form>
+    </div>
+
+    <div style="height: 50px;"></div>
+
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="#cupcakes">Cupcakes</a>
+        <a href="#occasion">Occasion</a>
+        <a href="#viewcart">View Cart</a>
+        <a href="#delivery" class="active">Delivery</a>
+    </div>
+
+    <div id="order-submitted" class="order-message">
+    <h2>Thank you for your order!</h2>
+    <p>Your order has been successfully submitted. You will receive a confirmation email shortly.</p>
+</div>
+
+    <script>
+        function toggleAddressFields() {
+            const deliveryType = document.getElementById("delivery-type").value;
+            const deliveryInputs = document.getElementById("delivery-inputs");
+            if (deliveryType === "pickup") {
+                deliveryInputs.style.display = "none";
+            } else {
+                deliveryInputs.style.display = "block";
+            }
+        }
     
-  <!-- Navigation bar -->
-      <section id=navigation>
-        <nav>
-          <ul>
-            <a href="TC_homepage_Girik.html">Home</a>
-        <a href="About_Hamza.html">About</a>
-        <a href="Contact Us - WEB REDESIGN.html">Contact</a>
-        <a href="Occasion_Page.html">Cupcakes</a>
-        <a href="toronto_cupcake.html">Occasion</a>
-        <a href="index.html">Delivery</a>
-        <a href="Shopping cart.html">View Cart</a>
-          </ul>
-        </nav>
-      </section>
-   </header>
+    </script>
+<script>
+    function openSidebar() {
+        document.getElementById("mySidebar").style.display = "block";
+    }
 
-    <!-- Main content -->
-     <section class="Infosection">
-      <h2 style="color:#F2CA7E; font-size: 50px";>Know About Us!</h2>
-      <div class="intro-text">
-        <p>Welcome to Toronto Cupcake, your go-to destination for the most delicious and freshly baked cupcakes in Toronto and the Greater Toronto Area (GTA). Whether you're celebrating a birthday, hosting a corporate event, or just craving a sweet treat, we've got the perfect cupcakes for every occasion. Order online 24/7 and enjoy fast, reliable delivery across the GTA! Delicious cupcakes made fresh for every occasion. We cater to corporate events, birthdays, weddings, and more. Browse through our selection of custom cupcakes or create your own<br></p>
-        <p>At Toronto Cupcake, we believe every moment deserves a little sweetness. Our cupcakes are handcrafted with love, using the finest ingredients to ensure exceptional taste and quality in every bite. From classic flavors to innovative creations, our menu has something for everyone. Hosting a themed event? Let us design custom cupcakes that perfectly match your vision. With convenient online ordering and prompt delivery, satisfying your sweet tooth has never been easier. Experience the joy of indulging in a treat that's as beautiful as it is delicious – because life is better with cupcakes!</p>
-      </div>
-      <img src="Image1.jpg" class="sectionimage">
-    </section>
+    function closeSidebar() {
+        document.getElementById("mySidebar").style.display = "none";
+    }
+</script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+    const form = document.querySelector("form"); 
+    const orderMessage = document.getElementById("order-submitted");
 
-  <h2 style="text-align:center; color:#F2CA7E">We Baked Fresh Daily: Our cupcakes are baked fresh every day to guarantee maximum flavor and quality.</h2>
-    <section class="Infosection">
-      <div class="text">
-        <ul>
-          <li>Perfect for Any Occasion: Whether it's a corporate event, wedding, birthday, or just because, our cupcakes are sure to impress.</li><br>
-          <li>Custom Designs Available: Need something unique? We offer custom cupcake designs to match your event's theme or personal taste.</li><br>
-          <li>Fast and Reliable Delivery: We deliver across Toronto, the GTA, and beyond, ensuring your cupcakes arrive fresh and on time.</li><br>
-          <li>Specialty Cupcakes for Every Season
-        Our cupcake offerings change with the seasons, so there's always something new to try! Check out our Always Available Cupcakes for classic flavors, or explore our Holiday Cupcakes and Special Event Cupcakes for something truly unique.</li></ul>
-        <p>
-          Celebrate with Toronto Cupcake<br>
-        Make your celebrations extra special with Toronto Cupcake. We offer a wide variety of cupcakes that are perfect for any event, from corporate meetings to weddings and birthdays. Our signature pink box delivery service is available across Toronto and the GTA, making it easy to enjoy our delicious cupcakes wherever you are.</p>
-        <p>
-          Order Cupcakes Online Today!<br>
-        Ready to indulge in Toronto's best cupcakes? Order online today and have fresh, delicious cupcakes delivered right to your door. Whether you need cupcakes for a party or just want to treat yourself,</p>
-      </div>
-    </section>
+    form.addEventListener("submit", function (event) {
+        event.preventDefault(); 
+        form.style.display = "none"; 
+        orderMessage.style.display = "block"; 
+    });
+});
+</script>
 
-   
-<!-- cupcake cards -->
-    <section class="specialty-cupcakes">
-      <h3 style="color:#F25CA2">Specialty Cupcakes</h3>
-      <div class="cupcake-cards">
-        <div class="cupcake-card">
-          <img src="WeddingCupcakes.webp" class="cupcake-image">
-          <h4>Wedding Cupcakes</h4>
-          <p style="color:white;">$44.99</p>
-          <button class="order-button">Add to cart</button>
-        </div>
-        <div class="cupcake-card">
-          <img src="WinterCupcakes.webp" class="cupcake-image">
-          <h4>Winter Cupcakes</h4>
-          <p style="color:white;">$25.99</p>
-          <button class="order-button">Add to cart</button>
-        </div>
-        <div class="cupcake-card">
-          <img src="FilledCupcakes.webp" class="cupcake-image">
-          <h4>Assorted Cupcakes</h4>
-          <p style="color:white;">$28.99</p>
-          <button class="order-button">Add to cart</button>
-        </div>
-        <div class="cupcake-card">
-          <img src="HolidayCupcakes.webp" class="cupcake-image">
-          <h4>Holiday Cupcakes</h4>
-          <p style="color:white;">$34.99</p>
-           <button class="order-button">Add to cart</button>
-        </div>
-      </div>
-    </section>
-
-   <!-- Filter Buttons -->
-   <h3 style="text-align:center; font-size: 40px;">More ocassions to choose Cupcakes for!</h3>
-     <section class="Infosection">
-      <div class="btn-group">
-          <button>Weddings</button></a>
-          <button>Birthdays</button>
-          <button>Themes</button>
-          <button>Anniversaries</button>
-          <button>Graduations</button>
-          <button>Holidays</button>
-          <button>Themes</button>
-          <button>Baby</button>
-          <button>Wrap</button>
-      </div>
-    </section>
-
-    <!-- Footer Navbar -->
-          <div class="navbar">
-              <a href="#home">Home</a>
-              <a href="#about">About</a>
-              <a href="#contact">Contact</a>
-              <a href="#cupcakes">Cupcakes</a>
-              <a href="#occasion" >Occasion</a>
-              <a href="#delivery">Delivery</a>
-              <a href="#view cart">View Cart</a>
-          </div>
-  
-
-    <script type="text/javascript">
-      const cupcakeCards = document.querySelectorAll('.cupcake-card');
-      cupcakeCards.forEach((card) => {
-        card.addEventListener('mouseenter', handleCardEnter);
-        card.addEventListener('mouseleave', handleCardLeave);
-      });
-
-      function handleCardEnter(event) {
-        const descriptionElement = event.target.querySelector('p');
-        descriptionElement.style.transform = 'translateY(0)';
-        descriptionElement.style.opacity = '1';
-      }
-
-      function handleCardLeave(event) {
-        const descriptionElement = event.target.querySelector('p');
-        descriptionElement.style.transform = 'translateY(20px)';
-        descriptionElement.style.opacity = '0';
-      }
-
-      const orderButtons = document.querySelectorAll('.order-button');
-      orderButtons.forEach((button) => {
-        button.addEventListener('click', handleOrderClick);
-      });
-
-      function handleOrderClick(event) {
-        alert(`Cupcakes add to cart!`);
-      }</script>
-          
-
-
-    </body>
-    </html>
+</body>
+</html>
